# artesian

./: .dockerignore  .gitignore  AGENTS.md  BRUNNR.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  NOTICE  README.md  SECURITY.md  clippy.toml  justfile  mkdocs.yml  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.config/: nextest.toml
.github/workflows/: ci.yml  docs.yml  release.yml
benchmarks/: README.md
benchmarks/comparison/: README.md
benchmarks/comparison/samples/: agent-smoke.json
benchmarks/results/large-corpus/: aggregate.json  charts.txt  summary.csv
benchmarks/results/large-source-run/: aggregate.json  charts.txt  summary.csv
benchmarks/results/mega-corpus/: aggregate.json  charts.txt  checksums.txt  summary.csv
benchmarks/results/mid-corpus/: aggregate.json  charts.txt  summary.csv
benchmarks/results/sample-run/: aggregate.json  charts.txt  checksums.txt  summary.csv
benchmarks/results/session-corpus/: aggregate.json  charts.txt  summary.csv
benchmarks/results/xl-corpus/: aggregate.json  charts.txt  summary.csv
benchmarks/tools/: generate_large_source_corpus.py  plot_scaling.py
crates/aquifer/src/: anchor.rs  backend.rs  backfill.rs  chunking.rs  compat.rs  decay.rs  dream.rs  entity.rs  event.rs  eviction.rs  files.rs  graph.rs  identity.rs  lane_lock.rs  lib.rs  mmr.rs  pgvector.rs  semantic_cache.rs  session.rs  sqlite_vec.rs  temporal.rs  types.rs  upgrade.rs  vector.rs  vector_memory.rs
crates/aquifer/tests/: access_tracking.rs  anchor.rs  bulk_import.rs  concurrency.rs  decay_reconcile_eviction.rs  files_backend.rs  linked_import.rs  memory_backend_contract.rs  qdrant.rs  rechunk.rs  rrf.rs
crates/artesian-bench/src/: main.rs
crates/artesian-bench/tests/: qdrant.rs
crates/artesian-cli/: Cargo.toml
crates/artesian-cli/src/: artesiand.rs  import.rs  main.rs  runtime.rs  update.rs
crates/artesian-cli/tests/: cli.rs  process_shutdown.rs
crates/artesian-core/src/: config.rs  lib.rs
crates/artesian-core/tests/: config_contract.rs
crates/artesian-mcp/: Cargo.toml
crates/artesian-mcp/src/: cli.rs  (+2 more)
crates/basin/: Cargo.toml
crates/bifrost/: Cargo.toml
crates/brunnr-cli/: Cargo.toml
crates/brunnr-cli/src/: brunnrd.rs  main.rs  runtime.rs
crates/brunnr-cli/tests/: cli.rs
crates/brunnr-core/: Cargo.toml
crates/brunnr-mcp/: Cargo.toml
crates/brunnr-mcp/src/: lib.rs  lib_tests.rs  main.rs
crates/brunnr-mcp/tests/: memory_tools.rs
crates/brunnr-process-agent/: Cargo.toml
crates/brunnr-test-support/: Cargo.toml
crates/flotilla/: Cargo.toml
crates/gauge/: Cargo.toml
crates/gauge/benchmarks/retrieval/: baseline.json
crates/gauge/src/: agentic.rs  bench.rs  eval.rs  lib.rs  retrieval_regression.rs
crates/headgate/: Cargo.toml
crates/headrace/: Cargo.toml
crates/hvergelmir/: Cargo.toml
crates/mimisbrunnr/: Cargo.toml
crates/mimisbrunnr/src/: backend.rs  backend_tests.rs  files.rs  files_tests.rs  lib.rs  qdrant.rs  qdrant_tests.rs  rrf.rs  rrf_tests.rs  types.rs  vector.rs  vector_memory.rs
crates/mimisbrunnr/tests/: files_backend.rs  memory_backend_contract.rs  qdrant.rs  rechunk.rs  rrf.rs
crates/urdarbrunnr/: Cargo.toml
crates/urdarbrunnr/src/: lib.rs
crates/urdarbrunnr/tests/: orchestrator.rs
deploy/artesian/: compose.yml
docs/: README.md  acc-bench.md  architecture.md  backends.md  composability.md  concurrency.md  development.md  governance.md  index.md  kit-format.md  loop-engineering.md  memory.md  modes.md  ocf.md  onboarding.md  orchestration.md  positioning.md  roadmap.md  self-repair.md  task-tracking.md  teams.md  token-savings.md  yggdrasil.md
docs/diagrams/: README.md
docs/stylesheets/: extra.css
site/: 404.html  index.html  sitemap.xml
site/acc-bench/: index.html
site/architecture/: index.html
site/backends/: index.html
site/composability/: index.html
site/concurrency/: index.html
site/context-tree/: index.html
site/development/: index.html
site/diagrams/: index.html
site/governance/: index.html
site/kit-format/: index.html
site/loop-engineering/: index.html
site/memory/: index.html
site/modes/: index.html
site/ocf/: index.html
site/onboarding/: index.html
site/orchestration/: index.html
site/positioning/: index.html
site/roadmap/: index.html
site/search/: search_index.json
site/self-repair/: index.html
site/sizing-and-deployment/: index.html
site/task-tracking/: index.html
site/teams/: index.html
site/token-savings/: index.html
site/upgrades/: index.html
site/why-rust/: index.html
(+40 files in other folders)
