# SPDX-License-Identifier: Apache-2.0

[package]
name = "brunnr-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
mimisbrunnr = { path = "../mimisbrunnr" }
rmcp = { workspace = true, features = ["transport-io"] }
schemars.workspace = true
serde.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
brunnr-test-support.workspace = true

[lints]
workspace = true
