# SPDX-License-Identifier: Apache-2.0

[package]
name = "mimisbrunnr"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
fastembed = { workspace = true, optional = true }
futures-util.workspace = true
qdrant-client = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true

[features]
default = []
qdrant = ["dep:fastembed", "dep:qdrant-client"]
