# SPDX-License-Identifier: Apache-2.0

[package]
name = "urdarbrunnr"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
brunnr-core = { path = "../brunnr-core" }
chrono.workspace = true
futures-util.workspace = true
hvergelmir = { path = "../hvergelmir" }
mimisbrunnr = { path = "../mimisbrunnr" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
thingr = { path = "../thingr" }
tokio.workspace = true

[dev-dependencies]
brunnr-test-support.workspace = true

[lints]
workspace = true
